Renamed stylesheet as hydeit, switched to original poole.css, added right shadow to sidebar, increased sidebar with, fixed few bugs on mobile devices.

--- a/public/css/hydeit.css
+++ b/public/css/hydeit.css
@@ -2,18 +2,15 @@
 ---
 
 /*
- *  __                  __
- * /\ \                /\ \
- * \ \ \___   __  __   \_\ \     __
- *  \ \  _ `\/\ \/\ \  /'_` \  /'__`\
- *   \ \ \ \ \ \ \_\ \/\ \_\ \/\  __/
- *    \ \_\ \_\/`____ \ \___,_\ \____\
- *     \/_/\/_/`/___/> \/__,_ /\/____/
- *                /\___/
- *                \/__/
+ *                    _       _____ _   
+ *    /\  /\_   _  __| | ___  \_   \ |_ 
+ *   / /_/ / | | |/ _` |/ _ \  / /\/ __|
+ *  / __  /| |_| | (_| |  __/\/ /_ | |_ 
+ *  \/ /_/  \__, |\__,_|\___\____/  \__|
+ *          |___/                       
  *
- * Designed, built, and released under MIT license by @mdo. Learn more at
- * https://github.com/poole/hyde.
+ * Redesigned, built, and released under MIT license by @manddar completely base on Hyde theme by @mdo. Learn more at
+ * https://github.com/manddar/HydeIt.
  */
 
 
@@ -32,12 +29,9 @@
  * Global resets
  *
  * Update the foundational and global aspects of the page.
- * font-family: 'Inter', sans-serif;
- * font-family: 'Open Sans', sans-serif;
  */
 
 html {
-  /* font-family: "PT Sans", Helvetica, Arial, sans-serif; */
   font-family: 'Open Sans', sans-serif;
 }
 @media (min-width: 48em) {
@@ -84,8 +78,9 @@ a:focus {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 22rem;
+    width: 24rem;
     text-align: left;
+    box-shadow: 15px 0px 17px -7px rgba(0, 0, 0, 0.19);
   }
 }
 
@@ -168,27 +163,25 @@ a.sidebar-nav-item:focus {
   text-decoration-skip-ink: none;
 }
 
-.related h2 {
-  font-family: 'Inter';
-  margin-bottom: 0.8em;
-}
-
-.related-posts li h3{
+.related{
   font-family: 'Inter', sans-serif;
 }
 
+.related h2 {
+  margin-bottom: 0.8em;
+}
 
 @media (min-width: 48em) {
   .content {
     max-width: 38rem;
-    margin-left: 20rem;
+    margin-left: 24rem;
     margin-right: 2rem;
   }
 }
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 24rem;
+    margin-left: 26rem;
     margin-right: 4rem;
   }
 }
@@ -216,87 +209,4 @@ a.sidebar-nav-item:focus {
     margin-left: 4rem;
     margin-right: 22rem;
   }
-}
-
-
-
-/*
- * Themes
- *
- * As of v1.1, Hyde includes optional themes to color the sidebar and links
- * within blog posts. To use, add the class of your choosing to the `body`.
- */
-
-/* Base16 (http://chriskempson.github.io/base16/#default) */
-
-/* Red */
-.theme-base-08 .sidebar {
-  background-color: #ac4142;
-}
-.theme-base-08 .content a,
-.theme-base-08 .related-posts li a:hover {
-  color: #ac4142;
-}
-
-/* Orange */
-.theme-base-09 .sidebar {
-  background-color: #d28445;
-}
-.theme-base-09 .content a,
-.theme-base-09 .related-posts li a:hover {
-  color: #d28445;
-}
-
-/* Yellow */
-.theme-base-0a .sidebar {
-  background-color: #f4bf75;
-}
-.theme-base-0a .content a,
-.theme-base-0a .related-posts li a:hover {
-  color: #f4bf75;
-}
-
-/* Green */
-.theme-base-0b .sidebar {
-  background-color: #90a959;
-}
-.theme-base-0b .content a,
-.theme-base-0b .related-posts li a:hover {
-  color: #90a959;
-}
-
-/* Cyan */
-.theme-base-0c .sidebar {
-  background-color: #75b5aa;
-}
-.theme-base-0c .content a,
-.theme-base-0c .related-posts li a:hover {
-  color: #75b5aa;
-}
-
-/* Blue */
-.theme-base-0d .sidebar {
-  background-color: #6a9fb5;
-}
-.theme-base-0d .content a,
-.theme-base-0d .related-posts li a:hover {
-  color: #6a9fb5;
-}
-
-/* Magenta */
-.theme-base-0e .sidebar {
-  background-color: #aa759f;
-}
-.theme-base-0e .content a,
-.theme-base-0e .related-posts li a:hover {
-  color: #aa759f;
-}
-
-/* Brown */
-.theme-base-0f .sidebar {
-  background-color: #8f5536;
-}
-.theme-base-0f .content a,
-.theme-base-0f .related-posts li a:hover {
-  color: #8f5536;
 }
